--- a/charts/prometheusalert/templates/configmap.yaml
+++ b/charts/prometheusalert/templates/configmap.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
 {{- if .Values.config.app_conf }}
   app.conf: |
-{{ .Values.config.app_conf | indent 4 }}
+    {{- include "common.tplvalues.render" (dict "value" .Values.config.app_conf "context" $ ) | indent 4 }}
 {{- end -}}
 
 {{- if .Values.config.init_sql }}
