feat: add apollo chart.

--- a/charts/apollo/templates/admin-service/deployment-adminservice.yaml
+++ b/charts/apollo/templates/admin-service/deployment-adminservice.yaml
@@ -13,29 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
----
-# configmap for apollo-adminservice
-kind: ConfigMap
-apiVersion: v1
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   {{- $adminServiceFullName := include "apollo.adminService.fullName" . }}
   name: {{ $adminServiceFullName }}
-data:
-  application-github.properties: |
-    spring.datasource.url = jdbc:mysql://{{include "apollo.configdb.serviceName" .}}:{{include "apollo.configdb.servicePort" .}}/{{ .Values.configdb.dbName }}{{ if .Values.configdb.connectionStringProperties }}?{{ .Values.configdb.connectionStringProperties }}{{ end }}
-    spring.datasource.username = {{ required "configdb.userName is required!" .Values.configdb.userName }}
-    spring.datasource.password = {{ required "configdb.password is required!" .Values.configdb.password }}
-    {{- if .Values.adminService.config.contextPath }}
-    server.servlet.context-path = {{ .Values.adminService.config.contextPath }}
-    {{- end }}
-
----
-kind: Deployment
-apiVersion: apps/v1
-metadata:
-  name: {{ $adminServiceFullName }}
   labels:
     {{- include "apollo.service.labels" . | nindent 4 }}
+  annotations:
+    checksum/config: {{ include (print $.Template.BasePath "/admin-service/configmap-adminservice.yaml") . | sha256sum }}
 spec:
   replicas: {{ .Values.adminService.replicaCount }}
   selector:
