--- a/charts/apollo/Chart.yaml
+++ b/charts/apollo/Chart.yaml
@@ -1,12 +1,27 @@
 apiVersion: v2
 appVersion: 2.2.0
-description: A Helm chart for Apollo Config Service and Apollo Admin Service
+annotations:
+  artifacthub.io/images: |
+    - name: apolloconfig/apollo-adminservice:2.2.0
+      image: apolloconfig/apollo-adminservice:2.2.0
+  artifacthub.io/links: |
+    - name: Chart Source
+      url: https://github.com/dellnoantechnp/helm-chart-xxl-job-admin/tree/main/charts
+description: This Helm chart for Apollo Config Service, Apollo Admin Service and Apollo portal.
 home: https://github.com/apolloconfig/apollo
 icon: https://raw.githubusercontent.com/apolloconfig/apollo/master/apollo-portal/src/main/resources/static/img/logo-simple.png
 maintainers:
-- email: nobodyiam@gmail.com
-  name: nobodyiam
-  url: https://github.com/nobodyiam
-name: apollo-service
+- email: dellnoantechnp@gmail.com
+  name: dellnoantechnp
+  url: https://github.com/dellnoantechnp/helm-chart-xxl-job-admin
+name: apollo
 type: application
-version: 0.7.0
+version: 0.7.1
+dependencies:
+  - name: common
+    repository: oci://registry-1.docker.io/bitnamicharts
+    tags:
+      - bitnami-common
+    version: 2.x.x
+sources:
+  - https://github.com/apolloconfig/apollo
