--- a/charts/apollo/templates/config-service/service-configservice.yaml
+++ b/charts/apollo/templates/config-service/service-configservice.yaml
@@ -13,18 +13,29 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: {{ include "apollo.configService.serviceName" . }}
   labels:
     {{- include "apollo.service.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.configService.service.type }}
+{{- with .Values.configService.service }}
+  type: {{ .type }}
+  {{- if and (eq .type "LoadBalancer") .externalTrafficPolicy }}
+  externalTrafficPolicy: {{ .externalTrafficPolicy }}
+  {{- end }}
+  {{- if and (eq .type "LoadBalancer") .loadBalancerIP }}
+  loadBalancerIP: {{ .externalTrafficPolicy }}
+  {{- end }}
   ports:
     - name: http
       protocol: TCP
-      port: {{ .Values.configService.service.port }}
-      targetPort: {{ .Values.configService.service.targetPort }}
+      port: {{ .port }}
+      targetPort: http
+      {{- if and (or (eq .type "NodePort") (eq .type "LoadBalancer")) .nodePort }}
+      nodePort: {{ .nodePort }}
+      {{- end }}
   selector:
-    app: {{ include "apollo.configService.fullName" . }}
+    app: {{ include "apollo.configService.fullName" $ }}
+{{- end }}
