--- a/charts/apollo/templates/portal/ingress-portal.yaml
+++ b/charts/apollo/templates/portal/ingress-portal.yaml
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.portal.ingress.enabled -}}
 {{- $fullName := include "apollo.portal.fullName" . -}}
-{{- $svcPort := .Values.service.port -}}
+{{- $svcPort := .Values.portal.service.port -}}
 {{- $apiVersion := "extensions/v1beta1" -}}
 {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" -}}
 {{- $apiVersion = "networking.k8s.io/v1" }}
@@ -28,17 +28,17 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "apollo.portal.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+  {{- with .Values.portal.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-{{- if .Values.ingress.ingressClassName }}
-  ingressClassName: {{ .Values.ingress.ingressClassName }}
+{{- if .Values.portal.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.portal.ingress.ingressClassName }}
 {{- end }}
-{{- if .Values.ingress.tls }}
+{{- if .Values.portal.ingress.tls }}
   tls:
-  {{- range .Values.ingress.tls }}
+  {{- range .Values.portal.ingress.tls }}
     - hosts:
       {{- range .hosts }}
         - {{ . | quote }}
@@ -47,7 +47,7 @@ spec:
   {{- end }}
 {{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
+  {{- range .Values.portal.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
