--- a/charts/apollo/templates/portal/configmap-portal.yaml
+++ b/charts/apollo/templates/portal/configmap-portal.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.portal.enabled }}
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -21,4 +22,5 @@ data:
 {{- range $fileName, $content := .Values.portal.config.files }}
 {{ $fileName | indent 2 }}: |
 {{ $content | indent 4 }}
+{{- end }}
 {{- end }}
