--- a/charts/apollo/templates/portal/deployment-portal.yaml
+++ b/charts/apollo/templates/portal/deployment-portal.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.portal.enabled }}
 #
 # Copyright 2021 Apollo Authors
 #
@@ -110,3 +111,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+{{- end }}
