--- a/charts/apollo/templates/portal/ingress-portal.yaml
+++ b/charts/apollo/templates/portal/ingress-portal.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.portal.enabled }}
 #
 # Copyright 2021 Apollo Authors
 #
@@ -68,4 +69,5 @@ spec:
             {{- end }}
         {{- end }}
   {{- end }}
+{{- end }}
 {{- end }}
